--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1><a href="http://steamcommunity.com/id/plopp2k">plopp</a></h1>
 	<h1><a href="http://steamcommunity.com/id/JULY20/">author</a></h1>
 	<h1><a href="http://steamcommunity.com/id/bbbbbbbbbbbbbbbbbbbb">shinez</a></h1>
-	<h1><a href="http://steamcommunity.com/id/fedora1337">willepille</a></h1>
+	<h1><a href="http://steamcommunity.com/id/fedora1337">2spooky4u</a></h1>
 	<h1><a href="http://steamcommunity.com/profiles/76561198165398779">tromr</a></h1>
 </div>
 	<title>$yachtclub$</title>
