--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1><a href="http://steamcommunity.com/id/JULY20/">author</a></h1>
 	<h1><a href="http://steamcommunity.com/id/bbbbbbbbbbbbbbbbbbbb">shinez</a></h1>
 	<h1><a href="http://steamcommunity.com/id/fedora1337">spook</a></h1>
-	<h1><a href="http://steamcommunity.com/profiles/76561198165398779">tromr</a></h1>
+	<h1><a href="http://steamcommunity.com/id/tromr2k">tromr</a></h1>
 </div>
 	<title>$yachtclub$</title>
 	<link rel="stylesheet" media="screen" href="mystyle.css">
