--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1><a href="http://steamcommunity.com/id/plopp2k">plopp</a></h1>
 	<h1><a href="http://steamcommunity.com/id/JULY20/">author</a></h1>
 	<h1><a href="http://steamcommunity.com/id/bbbbbbbbbbbbbbbbbbbb">shinez</a></h1>
-	<h1><a href="http://steamcommunity.com/id/fedora1337">spook</a></h1>
+	<h1><a href="http://steamcommunity.com/id/tradeforyacht/">spook</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tromr2k">tromr</a></h1>
 </div>
 	<title>$yachtclub$</title>
