--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </div>
 <div class=members>
 	<h1><a href="http://steamcommunity.com/id/plopp2k">plopp</a></h1>
-	<h1><a href="http://steamcommunity.com/id/JULY20/">author</a></h1>
+	<h1><a href="http://steamcommunity.com/id/curable">author</a></h1>
 	<h1><a href="http://steamcommunity.com/id/bbbbbbbbbbbbbbbbbbbb">shinez</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tradeforyacht/">spook</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tromr2k">tromr</a></h1>
