--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<h1><a href="http://steamcommunity.com/id/plopp2k">plopp</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tradeforyacht/">spook</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tromr2k">tromr</a></h1>
+	<h1><a href="http://steamcommunity.com/id/veryeliteryden">ryden</a></h1>
 </div>
 	<title>$yachtclub$</title>
 	<link rel="stylesheet" media="screen" href="mystyle.css">
