--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<h1><a href="http://steamcommunity.com/groups/lilboatclub">⛴ Yacht Club ⛴</a></h1>
 </div>
 <div class=members>
-	<h1><a href="http://steamcommunity.com/id/plopp2k">plopp</a></h1>
+	<h1><a href="http://steamcommunity.com/id/xfo">plopp</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tradeforyacht/">spook</a></h1>
 	<h1><a href="http://steamcommunity.com/id/tromr2k">tromr</a></h1>
-	<h1><a href="http://steamcommunity.com/id/veryeliteryden">ryden</a></h1>
+	<h1><a href="http://steamcommunity.com/id/Ebolasmokes/">polo</a></h1>
 </div>
 	<title>$yachtclub$</title>
 	<link rel="stylesheet" media="screen" href="mystyle.css">
